@startuml

title __SUBSCRIPTIONS's Class Diagram__\n

  package nl.han.dea.marijn.services.subscriptions {
    interface SubscriptionService {
        {abstract} + isValidUser()
        {abstract} + loadUser()
        {abstract} + retrieveUser()
        {abstract} + retrieveUser()
        {abstract} + activeSubscriptions()
        {abstract} + calculateTotalAmount()
        {abstract} + addActiveSubscription()
        {abstract} + getIndividualActiveSubscription()
        {abstract} + getIndividualSubscription()
        {abstract} + getSubscriptionIdByActiveSubscription()
        {abstract} + setSubscriptionInactive()
        {abstract} + setSubscriptionVerdubbeld()
        {abstract} + searchAllSubscriptions()
    }
  }
  

  package nl.han.dea.marijn.services.subscriptions {
    class SubscriptionServiceREST {
        + isValidUser()
        + loadUser()
        + activeSubscriptions()
        + calculateTotalAmount()
        + addActiveSubscription()
        + getIndividualActiveSubscription()
        + getSubscriptionIdByActiveSubscription()
        + setSubscriptionInactive()
        + setSubscriptionVerdubbeld()
        + searchAllSubscriptions()
        + getIndividualSubscription()
        + retrieveUser()
        + retrieveUser()
    }
  }
  

  SubscriptionServiceREST -up-|> SubscriptionService
  SubscriptionServiceREST o-- User : user


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
